# traact_vision

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci_workflow.yml
include/traact/: traact_vision_export.h  vision.h  vision_datatypes.h
include/traact/component/tracking/: CircleTracking.cpp  EstimatePose.cpp
include/traact/component/vision/: BasicVisionPattern.h  DebugWindow.cpp  OpenCVModule.cpp  OpenCVModule.h  OpenCVUndistortImage.cpp  OpenCVUndistortImage.h  OpenCvConvertImage.cpp  OpenCvPaint2DPositionList.cpp  OpenCvVideoCapture.cpp  OpenCvVideoCapture.h  OpenCvWindow.cpp  OpenCvWindow.h  SyncOpenCvMultiWindow.cpp
include/traact/math/: perspective.cpp  perspective.h  utils.h
include/traact/math/ceres/: DistanceError3D3D.h  PointReprojectionError.h  TargetReprojectionError.h
include/traact/opencv/: OpenCVUtils.h
include/traact/util/: GenerateMultiCameraBATestData.cpp  GenerateMultiCameraBATestData.h
include/traact/vision/: BruteForcePosePnP.h  FLOutsideInTracking.cpp  FLOutsideInTracking.h  GpuUndistortionHelper.h  SubPixelEdgeDectection.h  UndistortionHelper.cpp  UndistortionHelper.h
include/traact/vision/bundle_adjustment/: BACamera.h  BAData.h  BATarget.h
include/traact/vision/bundle_adjustment/cost_function/: CeresRefTargetNPointLengthError.h  CostFunctionUtils.h
include/traact/vision/outside_in/: PointEstimation.h
src/: VisionPlugin.cpp  vision.cpp
src/traact/: traact_vision_export.h  vision.cpp  vision.h  vision_datatypes.h
src/traact/component/vision/: BasicVisionPattern.h
src/traact/math/: perspective.cpp  perspective.h  utils.h
src/traact/math/ceres/: DistanceError3D3D.h  PointReprojectionError.h  TargetReprojectionError.h
src/traact/opencv/: OpenCVUtils.h
src/traact/util/: GenerateMultiCameraBATestData.cpp  GenerateMultiCameraBATestData.h  KinectLookupTable.cpp  KinectLookupTable.h
src/traact/vision/: BruteForcePosePnP.cpp  BruteForcePosePnP.h  FLOutsideInTracking.cpp  FLOutsideInTracking.h  GPUImage.cpp  GPUImage.h  GpuUndistortionHelper.cpp  GpuUndistortionHelper.h  Image.cpp  Image.h  SubPixelEdgeDectection.h  UndistortionHelper.cpp  UndistortionHelper.h
src/traact/vision/bundle_adjustment/: BACamera.cpp  BAData.cpp  BATarget.cpp  BundleAdjustment.cpp  BundleAdjustment.h
src/traact/vision/bundle_adjustment/cost_function/: CeresRefNPointReprojectionError.h  CeresTargetNPointReprojectionError.h
src/traact/vision/outside_in/: FindTargetPoints.cpp  FindTargetPoints.h  Point3DCandidate.cpp  Point3DCandidate.h  PointEstimation.cpp  PointEstimation.h  TrackingCamera.cpp  TrackingCamera.h
tests/: CMakeLists.txt  test_FL_OutsideInTracking.cpp  test_ceres_elements.cpp  test_estimate_3d_point.cpp  test_main.cpp  test_perspective.cpp  test_pose_estimation.cpp
